trading.log
  File "/home/runner/work/Whatman42/Whatman42/main.py", line 469
    return None
    ^
IndentationError: expected an indented block after 'if' statement on line 468
